update minimap hud style

--- a/packages/titan-reactor/src/renderer/react-ui/css/styles.css
+++ b/packages/titan-reactor/src/renderer/react-ui/css/styles.css
@@ -58,7 +58,7 @@
   .react-autosuggest__suggestion--highlighted {
     background-color: #ddd;
   }
-  
+/*   
   .bg-gray-100, .bg-gray-100:hover {
       background-color: #F6F5F3;
   }
@@ -97,4 +97,4 @@
 
 .bg-modal {
   background-color: #24252699;
-}
+} */
