--- a/packages/titan-reactor/src/renderer/react-ui/css/styles.css
+++ b/packages/titan-reactor/src/renderer/react-ui/css/styles.css
@@ -94,7 +94,7 @@
 .bg-gray-900, .bg-gray-900:hover {
     background-color: #242526;
 }
-
+*/
 .bg-modal {
   background-color: #24252699;
-} */
+} 
