--- a/src/renderer/scenes/pre-home-scene/styles.css
+++ b/src/renderer/scenes/pre-home-scene/styles.css
@@ -24,6 +24,9 @@
   --font-sans: Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu,
     Cantarell, Noto Sans, sans-serif, Segoe UI, Roboto, Ubuntu, Cantarell,
     Noto Sans, sans-serif;
+
+  --team-green: "#64c857";
+
 }
 
 html {
@@ -47,4 +50,9 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
+}
+
+ul {
+  list-style: none;
+  padding-inline-start: 0;
 }
