fix: rollback electron version until bw-casclib can be updated

--- a/src/renderer/command-center/style.css
+++ b/src/renderer/command-center/style.css
@@ -1,12 +1,5 @@
-@import "https://unpkg.com/open-props";
-/* optional imports that use the props */
-@import "https://unpkg.com/open-props/normalize.min.css";
-@import "https://unpkg.com/open-props/buttons.min.css";
-
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-
 * {
-    font-family: Roboto, sans-serif;
+    font-family: sans-serif;
 }
 
 .hover {
