move command center to configuration-ui

--- a/src/renderer/scenes/pre-home-scene/styles.css
+++ b/src/renderer/scenes/pre-home-scene/styles.css
@@ -35,6 +35,7 @@ body {
     max-block-size: 100%;
     max-inline-size: 100%;
     overflow: hidden;
+    touch-action: none;
 }
 
 @keyframes gradient {
