--- a/bundled/styles.css
+++ b/bundled/styles.css
@@ -1,21 +1,20 @@
 @font-face {
     font-family: "Conthrax";
-    src: url("../../../../bundled/assets/conthrax-rg.otf") format("opentype");
+    src: url("assets/conthrax-rg.otf") format("opentype");
     font-style: normal;
     font-weight: 100 400;
 }
 
 @font-face {
     font-family: "Conthrax-Bold";
-    src: url("../../../../bundled/assets/conthrax-hv.otf") format("opentype");
+    src: url("assets/conthrax-hv.otf") format("opentype");
     font-style: normal;
     font-weight: 500 900;
 }
 
 @font-face {
     font-family: "Inter";
-    src: url("../../../../bundled/assets/Inter-VariableFont_slnt,wght.ttf")
-        format("truetype");
+    src: url("assets/Inter-VariableFont_slnt,wght.ttf") format("truetype");
 }
 
 :root {
